# ghact-rust

./: .gitignore  Cargo.toml  LICENSE-APACHE-2.0  LICENSE-MIT  README.md
.githooks/: pre-commit  pre-push  run_cargo.sh
.github/workflows/: ci-rust.yml  dispatch.yml
