# -*- mode:toml; coding:utf-8-unix; -*-
# =============================================================================
[package]
name                    = "ghact-rust"
version                 = "0.1.0"
publish                 = false

description             = "GitHub Actions Rust CI."
keywords                = ["github"]
categories              = ["development-tools"]
readme                  = "README.md"

authors                 = ["hanepjiv <hanepjiv@gmail.com>"]
license                 = "MIT OR Apache-2.0"
documentation           = "https://docs.rs/elicit/"
homepage                = "https://github.com/hanepjiv/ghact-rust"
repository              = "https://github.com/hanepjiv/ghact-rust.git"
# =============================================================================
[dependencies]
